--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="row pt-5">
                 <div class="col-md-6">
-                    <img src="undraw_true_friends_c94g.png" alt="school" class="img-fluid"
+                    <img src="images/undraw_true_friends_c94g.png" alt="school" class="img-fluid"
                         style="width: 100%; height: 100%;">
                 </div>
                 <div class="col-md-6 pe-2">
@@ -100,7 +100,7 @@
                     <div class="card mb-3">
                         <div class="row g-0">
                             <div class="col-md-5">
-                                <img src="school.jpg" class="img-fluid rounded-start" alt="shamsiye">
+                                <img src="images/about/school.jpg" class="img-fluid rounded-start" alt="shamsiye">
                             </div>
                             <div class="col-md-7">
                                 <div class="card-body">
@@ -122,7 +122,7 @@
                     <div class="card mb-3">
                         <div class="row g-0">
                             <div class="col-md-5">
-                                <img src="education.jpg" class="img-fluid rounded-start" alt="shamsiye class">
+                                <img src="images/about/education.jpg" class="img-fluid rounded-start" alt="shamsiye class">
                             </div>
                             <div class="col-md-7">
                                 <div class="card-body">
@@ -148,7 +148,7 @@
                     <div class="card mb-3">
                         <div class="row g-0">
                             <div class="col-md-5">
-                                <img src="staff.jpg" class="img-fluid rounded-start" alt="shamsiye staff">
+                                <img src="images/about/staff.jpg" class="img-fluid rounded-start" alt="shamsiye staff">
                             </div>
                             <div class="col-md-7">
                                 <div class="card-body">
@@ -169,7 +169,7 @@
                     <div class="card mb-3">
                         <div class="row g-0">
                             <div class="col-md-5">
-                                <img src="vision.jpg" class="img-fluid rounded-start" alt="shamsiye vision">
+                                <img src="images/about/vision.jpg" class="img-fluid rounded-start" alt="shamsiye vision">
                             </div>
                             <div class="col-md-7">
                                 <div class="card-body">
@@ -205,21 +205,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active justify-content-center text-center">
-            <img src="zeki.jpeg" class="staff-image" alt="...">
+            <img src="images/staff/zeki - Copy.jpeg" class="staff-image" alt="...">
             <div class="pt-4">
               <p style="color:#6c63ff; font-size: 1.5rem;">ZEKI ALPSOY</p>
               <p>HEAD MASTER</p>
             </div>
           </div>
           <div class="carousel-item justify-content-center text-center">
-            <img src="zahrani.jpeg" class="staff-image" alt="...">
+            <img src="images/staff/zahrani - Copy.jpeg" class="staff-image" alt="...">
             <div class="pt-4">
                 <p style="color:#6c63ff; font-size: 1.5rem;">ZAHRAN SWAI</p>
               <p>SECOND MASTER O-LEVEL</p>
             </div>
           </div>
           <div class="carousel-item justify-content-center text-center">
-            <img src="mnyamisi.png" class="staff-image" alt="...">
+            <img src="images/staff/mnyamisi.png" class="staff-image" alt="...">
             <div class="pt-4">
                 <p style="color:#6c63ff; font-size: 1.5rem;">YUSUPH MNYAMIS</p>
               <p>SECOND MASTER A-LEVEL</p>
